Fix wrapped buy button in Safari

--- a/sources/stylesheets/_buy-button.scss
+++ b/sources/stylesheets/_buy-button.scss
@@ -11,6 +11,7 @@
     // sass-lint:disable class-name-format
     .form_field {
       padding-top: 15px;
+      word-break: normal;
 
       &:first-child {
         padding-top: 15px;
